--- a/assets/06-framework/01-gulp/05-html_tamplate.html
+++ b/assets/06-framework/01-gulp/05-html_tamplate.html
@@ -54,6 +54,57 @@
 					<title>uxkm</title>
 				</textarea>
 			</div>
+			<p class="mt_ms">
+				아래는 문자 배열을 활용하여 여러개의 변수를 선언하고 활용하는 방식입니다.
+			</p>
+			<div class="uk_gist_code_box mt_ms" data-filename="array variable 1" data-tit="njk - variable">
+				<textarea>
+					<!-- 배열 변수 선언 1 -->
+					{% set pageData = { pageName: "UXKM", pageDescription: "강의와 스터디를 위한 홈페이지 입니다." } %}
+
+					<!-- 변수 대입 -->
+					<h1>{{ pageData.pageName }}</h1>
+					<p>{{ pageData.pageDescription }}</p>
+
+					<!-- 빌드 후 -->
+					<h1>UXKM</h1>
+					<p>강의와 스터디를 위한 홈페이지 입니다.</p>
+				</textarea>
+			</div>
+			<div class="uk_gist_code_box mt_ms" data-filename="array variable 2" data-tit="njk - variable">
+				<textarea>
+					<!-- 배열 변수 선언 2 -->
+					{% set items = [
+						{
+							title: "UXKM",
+							Description: "강의와 스터디를 위한 홈페이지 입니다."
+						},
+						{
+							title: "HTML 이란?",
+							Description: "HTML은 'HyperText Markup Language'의 약자입니다."
+						}
+					] %}
+
+					<!-- 변수 대입 -->
+					{% for item in items %}
+					<section>
+						<h2>{{ item.title }}</h2>
+						<p>{{ item.Description }}</p>
+					</section>
+					{% endfor %}
+
+					<!-- 빌드 후 -->
+					<section>
+						<h2>UXKM</h2>
+						<p>강의와 스터디를 위한 홈페이지 입니다.</p>
+					</section>
+
+					<section>
+						<h2>HTML 이란?</h2>
+						<p>HTML은 &#39;HyperText Markup Language&#39;의 약자입니다.</p>
+					</section>
+				</textarea>
+			</div>
 		</article>
 
 		<!-- 조건문 -->
@@ -68,21 +119,37 @@
 			<article class="indent mt_m">
 				<h4 class="ml_mn t_blue">일반 조건문</h4>
 				<div class="uk_gist_code_box all_black mt_ms" data-tit="njk - if">
-				<textarea>
-					// 한가지 조건
-					{% if 조건 %}
-						It is true
-					{% endif %}
+					<textarea>
+						// 한가지 조건
+						{% if 조건 %}
+							It is true
+						{% endif %}
 
-					// 한가지 이상의 조건
-					{% if 조건1 %}
-						I am hungry
-					{% elif 조건2 %}
-						I am tired
-					{% else %} // 외 조건
-						I am good!
-					{% endif %}
-				</textarea>
+						// 한가지 이상의 조건
+						{% if 조건1 %}
+							I am hungry
+						{% elif 조건2 %}
+							I am tired
+						{% else %} // 외 조건
+							I am good!
+						{% endif %}
+					</textarea>
+				</div>
+				<p class="mt_ms">
+					javascript와 마찬가지로 <code>&& (and)</code>, <code>|| (or)</code> 도 가능합니다. 다만 <mark>njk</mark>에서는 기호가 아닌 영문으로 사용합니다.
+				</p>
+				<div class="uk_gist_code_box all_black mt_ms" data-tit="njk - if">
+					<textarea>
+						// and (&&)
+						{% if 조건1 and 조건2 %}  // 두가지 조건에 모두 만족할 때
+							It is true
+						{% endif %}
+
+						// or (||)
+						{% if 조건1 or 조건2 %}  // 두가지 조건 중 하나라도 만족할 때
+							It is true
+						{% endif %}
+					</textarea>
 				</div>
 			</article>
 
@@ -109,7 +176,8 @@
 			<h3 class="ml_mn">반복문</h3>
 			<p class="mt_s">
 				json data와 연동하여 메뉴 링크를 반복해서 만들어 보겠습니다.<br>
-				data.json 파일에 아래와 같은 코드로 메뉴에 대한 정보가 있다고 가정해봅니다.(참고로 설치와 적용 시 아래 json의 내용을 활용합니다.)
+				아래 예제는 json의 data를 이용하여 반복문을 만들었지만 위 <mark>'변수 선언' 예제에서 적용한 것처럼</mark> 배열로 만들어진 변수로도 반복문을 만들 수 있습니다.<br>
+				data.json 파일이 연결되어 있고 아래와 같은 코드로 메뉴에 대한 정보가 있다고 가정해봅니다.
 			</p>
 			<div class="uk_gist_code_box mt_ms" data-filename="data.json" data-tit="njk - data.json">
 				<textarea>
@@ -134,7 +202,7 @@
 			<p class="mt_ms">
 				위 json을 이용하여 반복문을 선언합니다.
 			</p>
-			<div class="uk_gist_code_box  mt_ms" data-tit="njk - for">
+			<div class="uk_gist_code_box  mt_ms" data-filename="nav.njk <i>(빌드 전)</i>" data-tit="njk - for">
 				<textarea>
 					<nav>
 						{%- for link_append in nav_data %}
@@ -146,7 +214,7 @@
 			<p class="mt_ms">
 				빌드하게 되면 아래처럼 반복문이 3개의 태그를 생성해주고 href와 링크 택스트도 삽입합니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="njk - for">
+			<div class="uk_gist_code_box mt_ms" data-filename="nav.html <i>(빌드 후)<i>" data-tit="njk - for">
 				<textarea>
 					<nav>
 						<a href="/">home</a>
@@ -161,9 +229,7 @@
 		<article class="indent mt_l">
 			<h3 class="ml_mn">함수(macro)</h3>
 			<p class="mt_s">
-				재사용 가능한 콘텐츠를 함수의 형태로 정의할 수 있습니다. react의 컴퍼넌트와 같다고 보면 됩니다.
-			</p>
-			<p class="mt_ms">
+				재사용 가능한 콘텐츠를 함수의 형태로 정의할 수 있습니다. react의 컴퍼넌트와 같다고 보면 됩니다.<br>
 				아래처럼 macro를 담을 파일을 생성 후 input에 대한 매크로를 작성합니다.
 			</p>
 			<div class="uk_gist_code_box all_black mt_ms" data-filename="_macros.njk" data-tit="njk - macro">
@@ -176,7 +242,7 @@
 			<p class="mt_ms">
 				_macros.njk 파일을 호출한 후 필요한 인수값을 적용하여 macro를 활용합니다.
 			</p>
-			<div class="uk_gist_code_box all_black mt_ms" data-tit="njk - macro">
+			<div class="uk_gist_code_box all_black mt_ms" data-filename="html <i>(빌드 전)</i>" data-tit="njk - macro">
 				<textarea>
 					{%- import '_macro.njk' as macro -%}
 					<form>
@@ -188,12 +254,12 @@
 			<p class="mt_ms">
 				빌드 시 아래처럼 인수값이 반영되어 태그가 생성됩니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="njk - macro">
+			<div class="uk_gist_code_box mt_ms" data-filename="html <i>(빌드 후)</i>" data-tit="njk - macro">
 				<textarea>
 					<!-- form -->
 					<form>
-						<input type="text" name="email" placeholder="email을 입력해 주세요." />
-						<input type="password" name="password" placeholder="비밀번호를 입력해 주세요." />
+						<input type="text" name="email" placeholder="email을 입력해 주세요.">
+						<input type="password" name="password" placeholder="비밀번호를 입력해 주세요.">
 					</form>
 				</textarea>
 			</div>
@@ -214,9 +280,9 @@
 				</textarea>
 			</div>
 			<p class="mt_ms">
-				필요한 페이지에서 _header.njk 파일은 include합니다.
+				필요한 페이지에서 _header.njk 파일을 include합니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="njk - include">
+			<div class="uk_gist_code_box mt_ms" data-filename="html <i>(include 선언)</i>" data-tit="njk - include">
 				<textarea>
 					<div class="wrap">
 						{% include("_header.njk") %}
@@ -226,9 +292,9 @@
 				</textarea>
 			</div>
 			<p class="mt_ms">
-				빌드 시 아래처럼 _header.njk의 내용이 합쳐진 상태로 출력됩니다.
+				빌드 시 아래처럼 _header.njk의 내용이 병합된 상태로 출력됩니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="njk - include">
+			<div class="uk_gist_code_box mt_ms" data-filename="html <i>(빌드 후)</i>" data-tit="njk - include">
 				<textarea>
 					<!-- include 호출 -->
 					<div class="wrap">
@@ -260,11 +326,11 @@
 						</head>
 						<body>
 							<div class="wrap">
-
+								&nbsp;
 								<!-- content -->
 								{%- block content %}
 								{%- endblock -%}
-
+								&nbsp;
 							</div>
 							<!-- //wrap -->
 						</body>
@@ -272,9 +338,11 @@
 				</textarea>
 			</div>
 			<p class="mt_ms">
-				위 템플릿을 보면 컨텐츠 영역은 <code>block</code>으로 지정되어 있습니다. 아래는 개별 페이지에서 템플릿을 호출하고 <code>block</code>영역에 컨텐츠를 삽입하는 방법입니다.
+				위 템플릿을 보면 컨텐츠 영역은 <code>block <mark>content</mark></code>으로 지정되어 있습니다.
+				여기서 <code><mark>content</mark></code>는 이 <code>block</code> 의 이름을 임의로 지정한 것이며 사용 용도에 따라 자유롭게 이름을 지정할 수 있습니다.<br>
+				아래는 개별 페이지에서 템플릿을 호출하고 <code>block</code>영역에 컨텐츠를 삽입하는 방법입니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-filename="index.html 빌드 전" data-tit="njk - layout template">
+			<div class="uk_gist_code_box mt_ms" data-filename="index.html <i>빌드 전</i>" data-tit="njk - layout template">
 				<textarea>
 					{%- extends "__layout_default.njk" -%}
 
@@ -286,7 +354,7 @@
 			<p class="mt_ms">
 				위 index.html을 빌드하게 되면 아래처럼 _layout.njk와 index.html이 병합된 상태로 출력됩니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-filename="index.html 빌드 후" data-tit="njk - layout template">
+			<div class="uk_gist_code_box mt_ms" data-filename="index.html <i>빌드 후</i>" data-tit="njk - layout template">
 				<textarea>
 					<!DOCTYPE html>
 					<html lang="ko">
@@ -296,9 +364,9 @@
 						</head>
 						<body>
 							<div class="wrap">
-
+								&nbsp;
 								<p>UXKM 홈페이지의 모든 문서는 UXKM의 자산입니다.</p>
-
+								&nbsp;
 							</div>
 							<!-- //wrap -->
 						</body>
@@ -369,9 +437,9 @@
 			<h3 class="ml_mn">불필요한 공백 제어</h3>
 			<p class="mt_s">
 				layout을 호출하거나 include, 변수선언 또는 기타 javascript문법을 사용하고 빌드했을 경우 불피요한 공백이 발생합니다.<br>
-				예를 들어 아래 코드를 보면 변수를 선언하면 빌드되는 html에는 변수 자체가 없어지기 때문에 변수를 선언한 빈 공간만 남게됩니다.
+				예를 들어 아래 코드에서 변수를 선언하면 빌드되는 html에는 변수 자체가 없어지기 때문에 변수를 선언한 빈 공간만 남게됩니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="njk - blank control">
+			<div class="uk_gist_code_box mt_ms" data-filename="Before" data-tit="njk - blank control">
 				<textarea>
 					<!-- 빌드 전 -->
 					<div class="wrap">
@@ -389,8 +457,9 @@
 			<p class="mt_ms">
 				위의 경우 '-' 기호를 활용하여 빈 공간을 없앨 수 있습니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="njk - blank control">
+			<div class="uk_gist_code_box mt_ms" data-filename="After" data-tit="njk - blank control">
 				<textarea>
+					<!-- 문법 -->
 					{%- 내용 -%}
 
 					<!-- 빌드 전 -->
@@ -406,9 +475,53 @@
 				</textarea>
 			</div>
 			<p class="mt_ms">
-				한 가지 예를 더 들어보겠습니다.
-				<!-- 컨텐츠 호출대 대한 예제 삽입 -->
+				한 가지 예를 더 들어보겠습니다.<br>
+				_layout.njk 에서 <code>block <mark>content</mark></code>를 만든 후 html 페이지에서 <mark>content</mark>를 적용하고 빌드하면
+				아래처럼 <mark><code>block</code>을 선언한 라인이 공백</mark>으로 남아있게 됩니다.
 			</p>
+			<div class="uk_gist_code_box mt_ms" data-filename="Before" data-tit="njk - blank control">
+				<textarea>
+					<!-- _layout.njk -->
+					<main role="main">
+						{% block content %}
+						{% endblock %}
+					</main>
+
+					<!-- index.html(빌드 전) -->
+					{% block content %}
+						<p>안녕하세요. UXKM입니다.</p>
+					{% endblock %}
+
+					<!-- index.html(빌드 후) -->
+					<main role="main">
+
+						<p>안녕하세요. UXKM입니다.</p>
+
+					</main>
+				</textarea>
+			</div>
+			<p class="mt_ms">
+				이 때 <code>block <mark>content</mark></code>를 이용하는 index.html에서 '_' 기호를 사용하여 공백 라인을 제거할 수 있습니다.
+			</p>
+			<div class="uk_gist_code_box mt_ms" data-filename="After" data-tit="njk - blank control">
+				<textarea>
+					<!-- _layout.njk -->
+					<main role="main">
+						{% block content %}
+						{% endblock %}
+					</main>
+
+					<!-- index.html(빌드 전) -->
+					{% block content -%}
+						<p>안녕하세요. UXKM입니다.</p>
+					{%- endblock %}
+
+					<!-- index.html(빌드 후) -->
+					<main role="main">
+						<p>안녕하세요. UXKM입니다.</p>
+					</main>
+				</textarea>
+			</div>
 		</article>
 	</section>
 
