- gulp nunjucksRender 내용 정리 중

--- a/assets/06-framework/01-gulp/05-html_tamplate.html
+++ b/assets/06-framework/01-gulp/05-html_tamplate.html
@@ -37,7 +37,7 @@
 			<h3 class="ml_mn">변수 선언</h3>
 			<p class="mt_s">
 				javscript의 변수와 같습니다. 다만 <code>var</code>, <code>let</code>, <code>const</code> 가 아닌 <code>set</code> 으로 변수를 선언합니다.<br>
-				변수의 값이 텍스트일 경우 반드시 따옴표(", ')로 감싸야 합니다.
+				변수의 값이 텍스트일 경우 반드시 큰따옴표(") 또는 작은따옴표(')로 감싸야 합니다.
 			</p>
 			<div class="uk_gist_code_box mt_ms" data-tit="njk - variable">
 				<textarea>
