--- a/assets/06-framework/01-gulp/05-html_tamplate.html
+++ b/assets/06-framework/01-gulp/05-html_tamplate.html
@@ -501,7 +501,7 @@
 				</textarea>
 			</div>
 			<p class="mt_ms">
-				이 때 <code>block <mark>content</mark></code>를 이용하는 index.html에서 '_' 기호를 사용하여 공백 라인을 제거할 수 있습니다.
+				이 때 <code>block <mark>content</mark></code>를 이용하는 index.html에서 minus 기호(-)를 사용하여 공백 라인을 제거할 수 있습니다.
 			</p>
 			<div class="uk_gist_code_box mt_ms" data-filename="After" data-tit="njk - blank control">
 				<textarea>
@@ -526,7 +526,7 @@
 	</section>
 
 
-	<!-- 1.5.2. gulp-file-include 설치 및 적용 -->
+	<!-- 1.5.2. gulp-nunjucks-render 설치 및 적용 -->
 	<!--<section class="indent mt_xxl">
 		<h2 class="ml_mn">1.5.2. gulp-file-include 설치 및 적용</h2>
 
