- gulp nunjucksRender 내용 정리 중

--- a/assets/06-framework/01-gulp/05-html_tamplate.html
+++ b/assets/06-framework/01-gulp/05-html_tamplate.html
@@ -455,7 +455,7 @@
 				</textarea>
 			</div>
 			<p class="mt_ms">
-				위의 경우 '-' 기호를 활용하여 빈 공간을 없앨 수 있습니다.
+				위의 경우 minus 기호(-)를 활용하여 빈 공간을 없앨 수 있습니다.
 			</p>
 			<div class="uk_gist_code_box mt_ms" data-filename="After" data-tit="njk - blank control">
 				<textarea>
