- gulp nunjucksRender 내용 정리 중

--- a/assets/06-framework/01-gulp/05-html_tamplate_part2.html
+++ b/assets/06-framework/01-gulp/05-html_tamplate_part2.html
@@ -8,527 +8,18 @@
 	<blockquote class="uk_note mt_xxl" role="note">
 		<h2 class="sound_only">요약 설명</h2>
 		<p>
-			PHP, ASP, JSP같은 서버 사이드 언어(Server-side Programming Language)는 include라는 기능 제공하여 반복되는 마크업을 최소화 하고,
-			유지보수 또한 매우 편리하게 할 수 있습니다.<br>
-			하지만 html은 include 언어를 지원하지 않아 많은 양의 페이지를 코딩해야 할 경우 적합하지 않습니다.<br>
+			<b class="t_blue">njk 문법</b> 에서는<br>
+			<span class="t_black">gulp-nunjucks-render</span>를 설치하고 템플릿을 제작하여 html로 빌드하는 방법에 대한 내용을 다루고 있습니다.
 		</p>
-
 		<p class="mt_ms">
-			'<mark>gulp-nunjucks-render</mark>'란(이하 '<mark>njk</mark>') 모질라(mozilla)에서 제작한 javascript 기반의 템플릿 언어입니다.<br>
-			Gulp는 <mark>njk</mark>패키지를 이용하여 html의 불편한 요소를 해소할 수 있으며, include 와 layout template 기능을 지원합니다.<br>
-			<!--<mark>njk</mark>를 제대로 사용하려면 javascript의 기본적인 문법(변수, 조건문, 반복문, 함수 등)은 활용할 수 있어야 합니다.-->
+			<!--'<mark>gulp-nunjucks-render</mark>'란(이하 '<mark>njk</mark>') 모질라(mozilla)에서 제작한 javascript 기반의 템플릿 언어입니다.<br>-->
+			<mark>gulp-nunjucks-render</mark>란(이하 <mark>njk</mark>) 모질라(mozilla)에서 제작한 HTML 기반의 구문에서 템플릿 상속을 표준 탑재하는 강력한 언어입니다.<br>
+			<mark>njk</mark>는 많은 양의 html 작업환경에 존재하는 불편한 요소를 해소할 수 있으며, include 와 layout template 기능을 지원합니다.<br>
 			javascript의 기본적인 문법(변수, 조건문, 반복문, 함수 등)을 알면 <mark>njk</mark>를 제대로 활용할 수 있습니다.
 			프로젝트 환경이나 디자인에 따라 레이아웃은 시시각각 변화하기 때문에 상황에 맞게 적절히 레이아웃의 변화를 주려면 javascript 기본 문법을 어느정도 학습하는 것을 추천합니다.<br>
 			javascript가 익숙하지 않아도 아래 예제를 따라하다 보면 <mark>njk</mark>를 활용한 기본 레이아웃을 완성할 수 있습니다.
 		</p>
 	</blockquote>
-
-	<!-- 1.5.1. gulp-nunjucks-render 문법 -->
-	<section class="indent mt_xxl">
-		<h2 class="ml_mn">1.5.1. gulp-nunjucks-render(njk) 문법</h2>
-		<p class="mt_ms">
-			패키지 설치와 적용에 앞서 문법을 먼저 알아보겠습니다.<br>
-			<mark>njk</mark>는 javascript에서 사용하는 거의 모든 문법을 사용할 수 있습니다. 너무 많은 기능을 가지고 있기에 그 중 사용이 많은 문법 위주로 설명하겠습니다.<br>
-			자세한 내용은 모질라의 '<span class="reference mt_l"><a href="https://mozilla.github.io/nunjucks/templating.html" target="_blank" title="새창열림">Nunjucks</a></span>' 페이지에서 확인 가능합니다.
-		</p>
-
-		<!-- 변수 선언 -->
-		<article class="indent mt_l">
-			<h3 class="ml_mn">변수 선언</h3>
-			<p class="mt_s">
-				javscript의 변수와 같습니다. 다만 <code>var</code>, <code>let</code>, <code>const</code> 가 아닌 <code>set</code> 으로 변수를 선언합니다.<br>
-				변수의 값이 텍스트일 경우 반드시 큰따옴표(") 또는 작은따옴표(')로 감싸야 합니다.
-			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="njk - variable">
-				<textarea>
-					<!-- 문법 -->
-					{% set 변수명 = 변수 값 %}
-
-					<!-- 변수 선언 -->
-					{% set title = "uxkm" %}
-
-					<!-- 변수 대입 -->
-					<title>{{ title }}</title>
-
-					<!-- 빌드 후 -->
-					<title>uxkm</title>
-				</textarea>
-			</div>
-			<p class="mt_ms">
-				아래는 문자 배열을 활용하여 여러개의 변수를 선언하고 활용하는 방식입니다.
-			</p>
-			<div class="uk_gist_code_box mt_ms" data-filename="array variable 1" data-tit="njk - variable">
-				<textarea>
-					<!-- 배열 변수 선언 1 -->
-					{% set pageData = { pageName: "UXKM", pageDescription: "강의와 스터디를 위한 홈페이지 입니다." } %}
-
-					<!-- 변수 대입 -->
-					<h1>{{ pageData.pageName }}</h1>
-					<p>{{ pageData.pageDescription }}</p>
-
-					<!-- 빌드 후 -->
-					<h1>UXKM</h1>
-					<p>강의와 스터디를 위한 홈페이지 입니다.</p>
-				</textarea>
-			</div>
-			<div class="uk_gist_code_box mt_ms" data-filename="array variable 2" data-tit="njk - variable">
-				<textarea>
-					<!-- 배열 변수 선언 2 -->
-					{% set items = [
-						{
-							title: "UXKM",
-							Description: "강의와 스터디를 위한 홈페이지 입니다."
-						},
-						{
-							title: "HTML 이란?",
-							Description: "HTML은 'HyperText Markup Language'의 약자입니다."
-						}
-					] %}
-
-					<!-- 변수 대입 -->
-					{% for item in items %}
-					<section>
-						<h2>{{ item.title }}</h2>
-						<p>{{ item.Description }}</p>
-					</section>
-					{% endfor %}
-
-					<!-- 빌드 후 -->
-					<section>
-						<h2>UXKM</h2>
-						<p>강의와 스터디를 위한 홈페이지 입니다.</p>
-					</section>
-
-					<section>
-						<h2>HTML 이란?</h2>
-						<p>HTML은 &#39;HyperText Markup Language&#39;의 약자입니다.</p>
-					</section>
-				</textarea>
-			</div>
-		</article>
-
-		<!-- 조건문 -->
-		<article class="indent mt_l">
-			<h3 class="ml_mn">조건문</h3>
-			<p class="mt_s">
-				javscript의 if문과 같습니다. 일반 적인 <code>if</code>, <code>else</code>, <code>else if</code>가 가능하며 삼항 연산자도 가능합니다.<br>
-				단, <mark>njk</mark>에서는 <mark>닫는 <code>if</code>도 필수로 선언</mark>되어야 합니다.
-			</p>
-
-			<!-- 일반 조건문 -->
-			<article class="indent mt_m">
-				<h4 class="ml_mn t_blue">일반 조건문</h4>
-				<div class="uk_gist_code_box all_black mt_ms" data-tit="njk - if">
-					<textarea>
-						// 한가지 조건
-						{% if 조건 %}
-							It is true
-						{% endif %}
-
-						// 한가지 이상의 조건
-						{% if 조건1 %}
-							I am hungry
-						{% elif 조건2 %}
-							I am tired
-						{% else %} // 외 조건
-							I am good!
-						{% endif %}
-					</textarea>
-				</div>
-				<p class="mt_ms">
-					javascript와 마찬가지로 <code>&& (and)</code>, <code>|| (or)</code> 도 가능합니다. 다만 <mark>njk</mark>에서는 기호가 아닌 영문으로 사용합니다.
-				</p>
-				<div class="uk_gist_code_box all_black mt_ms" data-tit="njk - if">
-					<textarea>
-						// and (&&)
-						{% if 조건1 and 조건2 %}  // 두가지 조건에 모두 만족할 때
-							It is true
-						{% endif %}
-
-						// or (||)
-						{% if 조건1 or 조건2 %}  // 두가지 조건 중 하나라도 만족할 때
-							It is true
-						{% endif %}
-					</textarea>
-				</div>
-			</article>
-
-			<!-- 삼항 연산자 -->
-			<article class="indent mt_m">
-				<h4 class="ml_mn t_blue">삼항 연산자</h4>
-				<p class="mt_s">
-					javascript의 삼항 연산자와 다르게 else 는 선택 사항입니다.
-				</p>
-				<div class="uk_gist_code_box all_black mt_ms" data-tit="njk - if">
-				<textarea>
-					//  foo가 진실이면 "true", 그렇지 않으면 "false" 문자열 출력
-					{{ "true" if foo else "false" }}
-
-					// foo가 진실이면 "true" 문자열 출력
-					{{ "true" if foo }}
-				</textarea>
-				</div>
-			</article>
-		</article>
-
-		<!-- 반복문 -->
-		<article class="indent mt_l">
-			<h3 class="ml_mn">반복문</h3>
-			<p class="mt_s">
-				json data와 연동하여 메뉴 링크를 반복해서 만들어 보겠습니다.<br>
-				아래 예제는 json의 data를 이용하여 반복문을 만들었지만 위 <mark>'변수 선언' 예제에서 적용한 것처럼</mark> 배열로 만들어진 변수로도 반복문을 만들 수 있습니다.<br>
-				data.json 파일이 연결되어 있고 아래와 같은 코드로 메뉴에 대한 정보가 있다고 가정해봅니다.
-			</p>
-			<div class="uk_gist_code_box mt_ms" data-filename="data.json" data-tit="njk - data.json">
-				<textarea>
-					{
-						"nav_data": [
-							{
-								"name": "home",
-								"href": "/"
-							},
-							{
-								"name": "intro",
-								"href": "/page/intro.html"
-							},
-							{
-								"name": "history",
-								"href": "/page/history.html"
-							}
-						]
-					}
-				</textarea>
-			</div>
-			<p class="mt_ms">
-				위 json을 이용하여 반복문을 선언합니다.
-			</p>
-			<div class="uk_gist_code_box  mt_ms" data-filename="nav.njk <i>(빌드 전)</i>" data-tit="njk - for">
-				<textarea>
-					<nav>
-						{%- for link_append in nav_data %}
-						<a href="{{ link_append.href }}">{{ link_append.name }}</a>
-						{%- endfor %}
-					</nav>
-				</textarea>
-			</div>
-			<p class="mt_ms">
-				빌드하게 되면 아래처럼 반복문이 3개의 태그를 생성해주고 href와 링크 택스트도 삽입합니다.
-			</p>
-			<div class="uk_gist_code_box mt_ms" data-filename="nav.html <i>(빌드 후)<i>" data-tit="njk - for">
-				<textarea>
-					<nav>
-						<a href="/">home</a>
-						<a href="/page/intro.html">intro</a>
-						<a href="/page/history.html">history</a>
-					</nav>
-				</textarea>
-			</div>
-		</article>
-
-		<!-- 함수(macro) -->
-		<article class="indent mt_l">
-			<h3 class="ml_mn">함수(macro)</h3>
-			<p class="mt_s">
-				재사용 가능한 콘텐츠를 함수의 형태로 정의할 수 있습니다. react의 컴퍼넌트와 같다고 보면 됩니다.<br>
-				아래처럼 macro를 담을 파일을 생성 후 input에 대한 매크로를 작성합니다.
-			</p>
-			<div class="uk_gist_code_box all_black mt_ms" data-filename="_macros.njk" data-tit="njk - macro">
-				<textarea>
-					{% macro field( name, placeholder, type='text' ) %}
-					<input type="{{ type }}" name="{{ name }}" placeholder="{{ placeholder }}">
-					{% endmacro %}
-				</textarea>
-			</div>
-			<p class="mt_ms">
-				_macros.njk 파일을 호출한 후 필요한 인수값을 적용하여 macro를 활용합니다.
-			</p>
-			<div class="uk_gist_code_box all_black mt_ms" data-filename="html <i>(빌드 전)</i>" data-tit="njk - macro">
-				<textarea>
-					{%- import '_macro.njk' as macro -%}
-					<form>
-						{{ field( 'email', 'email을 입력해 주세요.' ) }}
-						{{ field( 'password', '비밀번호를 입력해 주세요.', type='password' ) }}
-					</form>
-				</textarea>
-			</div>
-			<p class="mt_ms">
-				빌드 시 아래처럼 인수값이 반영되어 태그가 생성됩니다.
-			</p>
-			<div class="uk_gist_code_box mt_ms" data-filename="html <i>(빌드 후)</i>" data-tit="njk - macro">
-				<textarea>
-					<!-- form -->
-					<form>
-						<input type="text" name="email" placeholder="email을 입력해 주세요.">
-						<input type="password" name="password" placeholder="비밀번호를 입력해 주세요.">
-					</form>
-				</textarea>
-			</div>
-		</article>
-
-		<!-- include -->
-		<article class="indent mt_l">
-			<h3 class="ml_mn">include</h3>
-			<p class="mt_s">
-				페이지 마다 같은 내용이 반복될 경우 template으로 만들어 불어들일 수 있습니다.
-			</p>
-			<div class="uk_gist_code_box mt_ms" data-filename="_header.njk" data-tit="njk - include">
-				<textarea>
-					<header>
-						<h1>UXKM</h1>
-						<p>Welcome to...</p>
-					</header>
-				</textarea>
-			</div>
-			<p class="mt_ms">
-				필요한 페이지에서 _header.njk 파일을 include합니다.
-			</p>
-			<div class="uk_gist_code_box mt_ms" data-filename="html <i>(include 선언)</i>" data-tit="njk - include">
-				<textarea>
-					<div class="wrap">
-						{% include("_header.njk") %}
-
-						<p>UXKM 홈페이지의 모든 문서는 UXKM의 자산입니다.</p>
-					</div>
-				</textarea>
-			</div>
-			<p class="mt_ms">
-				빌드 시 아래처럼 _header.njk의 내용이 병합된 상태로 출력됩니다.
-			</p>
-			<div class="uk_gist_code_box mt_ms" data-filename="html <i>(빌드 후)</i>" data-tit="njk - include">
-				<textarea>
-					<!-- include 호출 -->
-					<div class="wrap">
-						<header>
-							<h1>UXKM</h1>
-							<p>Welcome to...</p>
-						</header>
-
-						<p>UXKM 홈페이지의 모든 문서는 UXKM의 자산입니다.</p>
-					</div>
-				</textarea>
-			</div>
-		</article>
-
-		<!-- layout template -->
-		<article class="indent mt_l">
-			<h3 class="ml_mn">layout template</h3>
-			<p class="mt_s">
-				기준이 되는 레이아웃 <mark>템플릿.njk</mark>를 만든 후 호출하여 개별 html에서는 컨텐츠에 해당하는 부분만 작업할 수 있습니다.
-				<mark>njk</mark>의 특징이라고 할 수 있습니다.
-			</p>
-			<div class="uk_gist_code_box mt_ms" data-filename="_layout.njk" data-tit="njk - layout template">
-				<textarea>
-					<!DOCTYPE html>
-					<html lang="ko">
-						<head>
-							<meta charset="UTF-8">
-							<title>UXKM</title>
-						</head>
-						<body>
-							<div class="wrap">
-								&nbsp;
-								<!-- content -->
-								{%- block content %}
-								{%- endblock -%}
-								&nbsp;
-							</div>
-							<!-- //wrap -->
-						</body>
-					</html>
-				</textarea>
-			</div>
-			<p class="mt_ms">
-				위 템플릿을 보면 컨텐츠 영역은 <code>block <mark>content</mark></code>으로 지정되어 있습니다.
-				여기서 <code><mark>content</mark></code>는 이 <code>block</code> 의 이름을 임의로 지정한 것이며 사용 용도에 따라 자유롭게 이름을 지정할 수 있습니다.<br>
-				아래는 개별 페이지에서 템플릿을 호출하고 <code>block</code>영역에 컨텐츠를 삽입하는 방법입니다.
-			</p>
-			<div class="uk_gist_code_box mt_ms" data-filename="index.html <i>빌드 전</i>" data-tit="njk - layout template">
-				<textarea>
-					{%- extends "__layout_default.njk" -%}
-
-					{% block content %}
-						<p>UXKM 홈페이지의 모든 문서는 UXKM의 자산입니다.</p>
-					{% endblock %}
-				</textarea>
-			</div>
-			<p class="mt_ms">
-				위 index.html을 빌드하게 되면 아래처럼 _layout.njk와 index.html이 병합된 상태로 출력됩니다.
-			</p>
-			<div class="uk_gist_code_box mt_ms" data-filename="index.html <i>빌드 후</i>" data-tit="njk - layout template">
-				<textarea>
-					<!DOCTYPE html>
-					<html lang="ko">
-						<head>
-							<meta charset="UTF-8">
-							<title>UXKM</title>
-						</head>
-						<body>
-							<div class="wrap">
-								&nbsp;
-								<p>UXKM 홈페이지의 모든 문서는 UXKM의 자산입니다.</p>
-								&nbsp;
-							</div>
-							<!-- //wrap -->
-						</body>
-					</html>
-				</textarea>
-			</div>
-		</article>
-
-		<!-- template 상속 -->
-		<article class="indent mt_l">
-			<h3 class="ml_mn">template 상속</h3>
-			<p class="mt_s">
-				일반적으로 호출하는 템플릿의 컨텐츠 영역에 새롭게 내용을 채우거나 <code>{{ super() }}</code>를 이용하여 기존 내용을 유지한 상태로 새로운 내용을 추가할 수 있습니다.<br>
-				예를 들어 _content.njk에 아래와 같은 코드가 있습니다.
-			</p>
-			<div class="uk_gist_code_box mt_ms" data-filename="_content.njk" data-tit="njk - layout inheritance">
-				<textarea>
-					<div class="wrap">
-						<!-- content -->
-						{%- block content %}
-							<p>안녕하세요 UXKM 입니다.</p>
-						{%- endblock -%}
-					</div>
-				</textarea>
-			</div>
-			<p class="mt_ms">
-				intro.html 에서 위 템플릿을 호출하고 block content에 내용을 채우면 <code>&lt;p&gt;안녕하세요 UXKM 입니다.&lt;/p&gt;</code>는 사라지고 새로운 내용이 채워집니다.
-			</p>
-			<div class="uk_gist_code_box mt_ms" data-filename="intro.html (super 사용 전)" data-tit="njk - layout inheritance">
-				<textarea>
-					<!-- 빌드 전 -->
-					{%- extends "_content.njk" -%}
-					{%- block content %}
-						<p>반갑습니다. 환영합니다.</p>
-					{%- endblock -%}
-
-					<!-- 빌드 후 -->
-					<div class="wrap">
-						<!-- content -->
-						<p>반갑습니다. 환영합니다.</p>
-					</div>
-				</textarea>
-			</div>
-			<p class="mt_ms">
-				<code>{{ super() }}</code>를 사용하면 <code>&lt;p&gt;안녕하세요 UXKM 입니다.&lt;/p&gt;</code>가 유지되고 새롭게 적용한 코드가 추가된 상태로 빌드됩니다.
-			</p>
-			<div class="uk_gist_code_box mt_ms" data-filename="intro.html (super 사용)" data-tit="njk - layout inheritance">
-				<textarea>
-					<!-- 빌드 전 -->
-					{%- extends "_content.njk" -%}
-					{%- block content %}
-						{{ super() }}
-						<p>반갑습니다. 환영합니다.</p>
-					{%- endblock -%}
-
-					<!-- 빌드 후 -->
-					<div class="wrap">
-						<!-- content -->
-						<p>안녕하세요 UXKM 입니다.</p>
-						<p>반갑습니다. 환영합니다.</p>
-					</div>
-				</textarea>
-			</div>
-		</article>
-
-		<!-- 불필요한 공백 제어 -->
-		<article class="indent mt_l">
-			<h3 class="ml_mn">불필요한 공백 제어</h3>
-			<p class="mt_s">
-				layout을 호출하거나 include, 변수선언 또는 기타 javascript문법을 사용하고 빌드했을 경우 불피요한 공백이 발생합니다.<br>
-				예를 들어 아래 코드에서 변수를 선언하면 빌드되는 html에는 변수 자체가 없어지기 때문에 변수를 선언한 빈 공간만 남게됩니다.
-			</p>
-			<div class="uk_gist_code_box mt_ms" data-filename="Before" data-tit="njk - blank control">
-				<textarea>
-					<!-- 빌드 전 -->
-					<div class="wrap">
-						{% set pageName = "main page" %}
-						<p>{{ pageName }}</p>
-					</div>
-
-					<!-- 빌드 후 -->
-					<div class="wrap">
-
-						<p>main page</p>
-					</div>
-				</textarea>
-			</div>
-			<p class="mt_ms">
-				위의 경우 minus 기호(-)를 활용하여 빈 공간을 없앨 수 있습니다.
-			</p>
-			<div class="uk_gist_code_box mt_ms" data-filename="After" data-tit="njk - blank control">
-				<textarea>
-					<!-- 문법 -->
-					{%- 내용 -%}
-
-					<!-- 빌드 전 -->
-					<div class="wrap">
-						{%- set pageName = "main page" -%}
-						<p>{{ pageName }}</p>
-					</div>
-
-					<!-- 빌드 후 -->
-					<div class="wrap">
-						<p>main page</p>
-					</div>
-				</textarea>
-			</div>
-			<p class="mt_ms">
-				한 가지 예를 더 들어보겠습니다.<br>
-				_layout.njk 에서 <code>block <mark>content</mark></code>를 만든 후 html 페이지에서 <mark>content</mark>를 적용하고 빌드하면
-				아래처럼 <mark><code>block</code>을 선언한 라인이 공백</mark>으로 남아있게 됩니다.
-			</p>
-			<div class="uk_gist_code_box mt_ms" data-filename="Before" data-tit="njk - blank control">
-				<textarea>
-					<!-- _layout.njk -->
-					<main role="main">
-						{% block content %}
-						{% endblock %}
-					</main>
-
-					<!-- index.html(빌드 전) -->
-					{% block content %}
-						<p>안녕하세요. UXKM입니다.</p>
-					{% endblock %}
-
-					<!-- index.html(빌드 후) -->
-					<main role="main">
-
-						<p>안녕하세요. UXKM입니다.</p>
-
-					</main>
-				</textarea>
-			</div>
-			<p class="mt_ms">
-				이 때 <code>block <mark>content</mark></code>를 이용하는 index.html에서 minus 기호(-)를 사용하여 공백 라인을 제거할 수 있습니다.
-			</p>
-			<div class="uk_gist_code_box mt_ms" data-filename="After" data-tit="njk - blank control">
-				<textarea>
-					<!-- _layout.njk -->
-					<main role="main">
-						{% block content %}
-						{% endblock %}
-					</main>
-
-					<!-- index.html(빌드 전) -->
-					{% block content -%}
-						<p>안녕하세요. UXKM입니다.</p>
-					{%- endblock %}
-
-					<!-- index.html(빌드 후) -->
-					<main role="main">
-						<p>안녕하세요. UXKM입니다.</p>
-					</main>
-				</textarea>
-			</div>
-		</article>
-
-		<p class="mt_ms">
-			여기까지 njk를 활용하기 위해 기본으로 알고있어야 하는 문법을 알아보았습니다. 위 문법을 활용하고 응용하면 웹만한 웹사이트 구축은 충분히 가능합니다.<br>
-			다음 페이지에서는 njk를 설치하는 적용하는 과정을 알아보겠습니다.
-		</p>
-	</section>
 
 
 	<!-- 1.5.2. gulp-nunjucks-render 설치 및 적용 -->
