- gulp nunjucksRender 내용 정리 중

--- a/assets/06-framework/01-gulp/05-html_tamplate_part1.html
+++ b/assets/06-framework/01-gulp/05-html_tamplate_part1.html
@@ -221,6 +221,9 @@
 					</nav>
 				</textarea>
 			</div>
+			<p class="mt_ms">
+				만약 아이템의 index 값 을 추출하고 싶다면 <mark><code>{{ loop.index }}</code></mark>를 사용하면 됩니다.
+			</p>
 		</article>
 
 		<!-- 함수(macro) -->
